to run HoodieExampleSparkUtils.java